# template-py-aiogram-bot

./: .gitignore  README.md  loader.py  main.py  projectconfig.json.example  pyproject.toml
utils/: __init__.py  singletone.py  tools.py
