[tool.poetry]
name = "manager-bot"
version = "0.0.1"
description = "Administration and management of chats and channels in telegram."
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
